--- a/assets/scss/foundation.scss
+++ b/assets/scss/foundation.scss
@@ -1,10 +1,10 @@
-
-@import "";
+//@import "";
 
 .care-streetview-iframe iframe {
   width: 100%;
-  height:413px;
+  height: 413px;
 }
+
 .acf-map {
   width: 100%;
   height: 400px;
@@ -13,5 +13,14 @@
   /* fixes potential theme css conflict */
   img {
     max-width: inherit !important;
+  }
+}
+
+.care-office-button {
+  display: flex;
+  a.button {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
 }
